--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -2,10 +2,17 @@
 <html>
   <head>
     <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
   </head>
   <body>
-    <script src="script.js"></script>
+    <div class="title">
+    Tic-Tac-Toe
+  </div>
+    <div">
+      <script src="script.js"></script>
+      <script src="minimax.js"></script>
+    </div>
   </body>
 </html>
