--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <ul class="timeline">
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Cube%20SlideShow"><span class="badge badge-primary badge-pill font-weight-normal">Cube SlideShow</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Job%20Search"><span class="badge badge-primary badge-pill font-weight-normal">Job Search</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Real-Time-Chat"><span class="badge badge-primary badge-pill font-weight-normal">Real Time Chat</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Tic-Tac-Toe"><span class="badge badge-primary badge-pill font-weight-normal">Tic-Tac-Toe</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Text-Adventure"><span class="badge badge-primary badge-pill font-weight-normal">Text Adventure</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Face-Detection-2"><span class="badge badge-primary badge-pill font-weight-normal">Face Detection 2</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Face-Detection-1"><span class="badge badge-primary badge-pill font-weight-normal">Face Detection 1</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Catch%20Me%20If%20You%20Can"><span class="badge badge-primary badge-pill font-weight-normal">Catch Me If You Can</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Profile%20Cards"><span class="badge badge-primary badge-pill font-weight-normal">Profile Cards</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Invisible%20Card"><span class="badge badge-primary badge-pill font-weight-normal">Invisible Card</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/TinDog"><span class="badge badge-primary badge-pill font-weight-normal">TinDog</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Dicee%20Challenge"><span class="badge badge-primary badge-pill font-weight-normal">Dice Challenge</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Drum%20Kit"><span class="badge badge-primary badge-pill font-weight-normal">Drum Kit</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Simon%20Game%20Challenge"><span class="badge badge-primary badge-pill font-weight-normal">Simon Game Challenge</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Hamburger%20Menu"><span class="badge badge-primary badge-pill font-weight-normal">Hamburger Menu</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Slide%20Show"><span class="badge badge-primary badge-pill font-weight-normal">Slide Show</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Sign%20Up%20Form"><span class="badge badge-primary badge-pill font-weight-normal">Sign Up Form</span></a></li>
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Pomodoro%20Clock"><span class="badge badge-primary badge-pill font-weight-normal">Pomodoro Clock</span></a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Cube%20SlideShow"><span class="badge badge-primary badge-pill font-weight-normal">Cube SlideShow</span>, 30/06/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Job%20Search"><span class="badge badge-primary badge-pill font-weight-normal">Job Search</span>, 01/06/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Real-Time-Chat"><span class="badge badge-primary badge-pill font-weight-normal">Real Time Chat</span>, 02/05/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Tic-Tac-Toe"><span class="badge badge-primary badge-pill font-weight-normal">Tic-Tac-Toe</span>, 02/05/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Text-Adventure"><span class="badge badge-primary badge-pill font-weight-normal">Text Adventure</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Face-Detection-2"><span class="badge badge-primary badge-pill font-weight-normal">Face Detection 2</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Face-Detection-1"><span class="badge badge-primary badge-pill font-weight-normal">Face Detection 1</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Catch%20Me%20If%20You%20Can"><span class="badge badge-primary badge-pill font-weight-normal">Catch Me If You Can</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Profile%20Cards"><span class="badge badge-primary badge-pill font-weight-normal">Profile Cards</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Invisible%20Card"><span class="badge badge-primary badge-pill font-weight-normal">Invisible Card</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/TinDog"><span class="badge badge-primary badge-pill font-weight-normal">TinDog</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Dicee%20Challenge"><span class="badge badge-primary badge-pill font-weight-normal">Dice Challenge</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Drum%20Kit"><span class="badge badge-primary badge-pill font-weight-normal">Drum Kit</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Simon%20Game%20Challenge"><span class="badge badge-primary badge-pill font-weight-normal">Simon Game Challenge</span>, 15/02/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Hamburger%20Menu"><span class="badge badge-primary badge-pill font-weight-normal">Hamburger Menu</span>, 12/01/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Slide%20Show"><span class="badge badge-primary badge-pill font-weight-normal">Slide Show</span>, 12/01/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Sign%20Up%20Form"><span class="badge badge-primary badge-pill font-weight-normal">Sign Up Form</span>, 12/01/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Pomodoro%20Clock"><span class="badge badge-primary badge-pill font-weight-normal">Pomodoro Clock</span>, 09/08/2020</a></li>
     </ul>
 </body>
 </html>
