Form Validator Project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <ul class="timeline">
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Cube%20SlideShow"><span class="badge badge-primary badge-pill font-weight-normal">Form Validator</span>, 04/07/2020</a></li>
     <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Cube%20SlideShow"><span class="badge badge-primary badge-pill font-weight-normal">Cube SlideShow</span>, 30/06/2020</a></li>
     <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Job%20Search"><span class="badge badge-primary badge-pill font-weight-normal">Job Search</span>, 01/06/2020</a></li>
     <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Real-Time-Chat"><span class="badge badge-primary badge-pill font-weight-normal">Real Time Chat</span>, 02/05/2020</a></li>
