--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <ul class="timeline">
-    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Cube%20SlideShow"><span class="badge badge-primary badge-pill font-weight-normal">Form Validator</span>, 04/07/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Lyrics%20Search%20Application"><span
+    class="badge badge-primary badge-pill font-weight-normal">Lyrics Search Application</span>, 31/10/2020</a></li>
+    <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Form-Validator"><span class="badge badge-primary badge-pill font-weight-normal">Form Validator</span>, 04/07/2020</a></li>
     <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Cube%20SlideShow"><span class="badge badge-primary badge-pill font-weight-normal">Cube SlideShow</span>, 30/06/2020</a></li>
     <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Job%20Search"><span class="badge badge-primary badge-pill font-weight-normal">Job Search</span>, 01/06/2020</a></li>
     <li><a href="https://github.com/K-G-PRAJWAL/HTML-CSS-Projects/tree/master/Real-Time-Chat"><span class="badge badge-primary badge-pill font-weight-normal">Real Time Chat</span>, 02/05/2020</a></li>
